fix(dropdown): placeholder color/contrast

--- a/src/components/reusable/dropdown/dropdown.scss
+++ b/src/components/reusable/dropdown/dropdown.scss
@@ -312,7 +312,7 @@ kyn-tag-group {
 }
 
 .placeholder-text {
-  color: var(--kd-color-text-variant-placeholder);
+  color: var(--kd-color-text-level-primary);
 }
 
 .dropdown.ai-connected .wrapper .custom .options {
